crates/structurizr-analysis/tests/snapshots/document_snapshots__document_snapshot@directives__identifiers_missing_value_err.snap
---
source: crates/structurizr-analysis/tests/document_snapshots.rs
expression: "SnapshotView::from(&snapshot)"
---
SnapshotView {
    has_syntax_errors: true,
    diagnostics: [
        SyntaxDiagnostic {
            kind: ErrorNode,
            message: "unexpected syntax",
            span: TextSpan {
                start_byte: 0,
                end_byte: 90,
                start_point: TextPoint {
                    row: 0,
                    column: 0,
                },
                end_point: TextPoint {
                    row: 6,
                    column: 1,
                },
            },
        },
        SyntaxDiagnostic {
            kind: ErrorNode,
            message: "unexpected syntax",
            span: TextSpan {
                start_byte: 10,
                end_byte: 73,
                start_point: TextPoint {
                    row: 0,
                    column: 10,
                },
                end_point: TextPoint {
                    row: 4,
                    column: 31,
                },
            },
        },
        SyntaxDiagnostic {
            kind: ErrorNode,
            message: "unexpected syntax",
            span: TextSpan {
                start_byte: 50,
                end_byte: 56,
                start_point: TextPoint {
                    row: 4,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 4,
                    column: 14,
                },
            },
        },
    ],
    include_directives: [],
    identifier_modes: [
        IdentifierModeFact {
            mode: Other(
                "model",
            ),
            raw_value: "model",
            value_kind: Identifier,
            span: TextSpan {
                start_byte: 16,
                end_byte: 39,
                start_point: TextPoint {
                    row: 1,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 3,
                    column: 9,
                },
            },
            value_span: TextSpan {
                start_byte: 34,
                end_byte: 39,
                start_point: TextPoint {
                    row: 3,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 3,
                    column: 9,
                },
            },
            container: SourceFile,
        },
    ],
    symbols: [],
    references: [],
}
